# gimp-plugin-insanebump

./: CMakeLists.txt  README.md
src/: InsaneBump.c  InsaneBump.h  PluginConnectors.c  PluginConnectors.h  normalmap.c  scale.c  scale.h
src/objects/: cube.h  quad.h  sphere.h  teapot.h  torus.h
src/win32c/: InsaneBump3.py  MINGWFixGimp.txt
